Change 'kwmc query space' to get space id, rename old to 'kwmc query space tiling-mode'

--- a/kwmc/kwmc.1
+++ b/kwmc/kwmc.1
@@ -324,8 +324,11 @@ Terminate kwm
 .B prefix
             Get state of the prefix-key
 .LP
+.B space tiling mode
+            Get tiling mode used for new spaces
+.LP
 .B space
-            Get tilling mode used for new spaces
+            Get workspace_id of current space
 .LP
 .B cycle-focus
             Get active cycle-focus mode
